# antivirus-sdk

./: LICENSE.txt  README.md
api/: avApi.h  avCommon.c  avCommon.h  avPlugin.h
clam/: CMakeLists.txt  ClamPlugin.cpp  ClamPlugin.hpp  avName.h  avPlugin.cpp
sample/: CMakeLists.txt  avName.h  avPlugin.c
test/: avserver  libktcrypto.so.0.9.8  libktssl.so.0.9.8  libktz.so.1  openssl-License.txt  tests
